--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Você decide o futuro da IA</title>
+    <title>Você decide como mudar a sociedade</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <div class="caixa-principal">
-    <h1>Você decide o futuro da IA</h1>
+    <h1>Você decide como mudar a sociedade</h1>
     <div class="caixa-perguntas"></div>
     <div class="caixa-alternativas"></div>
     <div class="caixa-resultados">
