--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
    <div class="caixa-principal">
     <h1>Você decide como mudar a sociedade</h1>
     <div class="tela-inicial">
-        <p>Setembro de 2024, e a nossa sociedade ainda continua a mesma em certos aspectos, ainda tomada pela ignorância e pensamentos retrógrados, mas hoje contamos com algo que a sociedade não tinha no passado, a internet e o poder de mudar o pensamento humano por meio de dados, informações e relatos de quem já viveu a pior face do preconceito, mas e você? O que você faria para ajudar a mudar a sociedade?</p>
+        <p>Setembro de 2024, e a nossa sociedade ainda continua a mesma em certos aspectos, ainda tomada pela ignorância e pensamentos retrógrados, mas hoje contamos com algo que a sociedade não tinha no passado, a internet e o poder de mudar o pensamento humano por meio de dados, informações e relatos de quem já viveu a pior face do preconceito, mas e você? O que você faria para ajudar a mudar a sociedade?
+            A seguir você terá a oportunidade de escolher o que fazer em diferentes situações na sociedade, por meio de uma sequência de perguntas, e ver quais serão os resultados das suas escolhas.
+        </p>
+        <button class="iniciar-btn">Vamos começar!</button>
     </div>
     <div class="caixa-perguntas"></div>
     <div class="caixa-alternativas"></div>
