--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="caixa-perguntas"></div>
     <div class="caixa-alternativas"></div>
-    <div class="caixa-resultados">
+    <div class="caixa-resultado">
         <p class="texto-resultado"></p>
         <button class="novamente-btn">Jogar Novamente</button>
     </div>
